Fixing overlap on add friend button.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@745 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-core/css/directory-members.css
+++ b/bp-core/css/directory-members.css
@@ -126,6 +126,7 @@ ul#members-list li {
 	background: url(../../bp-core/images/button_back.gif) top left no-repeat;
 	display: inline-block;
 	margin-bottom: 10px;
+	margin-right: 5px;
 }
 
 .friendship-button a {
@@ -136,6 +137,7 @@ ul#members-list li {
 	padding: 0 33px 0 11px;
 	text-shadow: 0 1px 0 #fff;
 	text-decoration: none;
+	margin-right: -6px;
 }
 	.friendship-button a:hover {
 		color: #555;
